package lab08.Responsabilidades;



public interface EmployeeInterface {
    public void start(Date startDate);
    public void terminate(Date terminateDate);
    public void work();
}
